@@ -1,6 +1,12 @@
 2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
+	  Debug every warning when it gets created.
+	  Prefix all opcode debugging with DIS, makes it easier to find.
+
+2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/CodeChecks.py:
 	* pychecker/Warning.py:
 	* pychecker/options.py:
 	* pychecker/pcmodules.py:
